# Github-Feishu-Bot

./: .gitignore  README.md  config.py  deploy.sh  main.py  manage.sh  pyproject.toml
scripts/: start.sh
systemd/: github-feishu-bot.service
