[tool.poetry]
name = "github-feishu-bot"
version = "0.1.0"
description = "A real-time notification bot that automatically forwards GitHub repository events (pushes, pull requests, issues, releases) to Feishu group chats with rich card messages."
authors = ["Shentai Zhang"]
license = "Apache Licence 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
lark-oapi = "^1.4.19"
gunicorn = "^23.0.0"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
